# bitquan

./: .cirrus.yml  .gitignore  CMakeLists.txt  CONTRIBUTING.md  COPYING  MINING_LOOP_README.md  MULTICORE_MINING.md  RANDOMQ_IMPLEMENTATION_SUMMARY.md  README.md  SECURITY.md  calculate_difficulty.py  check_difficulty.py  libbitquantumkernel.pc.in  test_genesis_verification.bat  test_genesis_verification.sh  test_gpu_verification.bat  test_gpuminer.sh  test_mining_debug.py  test_mining_fix.py  test_mining_loop.bat  test_mining_loop.sh  test_multicore_mining.sh  test_randomq.py  test_randomq_simple.cpp  vcpkg.json
cpuminer/: BUILD_WINDOWS_GUIDE.md  CMakeLists.txt  CMakeLists_fix.json  CMakeLists_fixed.txt  CMakeLists_header_only.txt  CMakeLists_mingw.txt  CMakeLists_mingw_linux.txt  CMakeLists_nlohmann_fix.txt  CMakeLists_windows.txt  CMakePresets.json  CODE_REVIEW_REPORT.md  COMPILATION_ERRORS_FIX_GUIDE.md  CPP20_COMPATIBILITY_GUIDE.md  CURL_FIX_GUIDE.md  DEPENDENCY_FIX_GUIDE.md  FINAL_CODE_REVIEW_SUMMARY.md  MINGW_FIX_GUIDE.md  MINGW_HEADER_FIX_GUIDE.md  MINGW_LINUX_FIX_GUIDE.md  NLOHMANN_JSON_FIX_GUIDE.md  PATH_FIX_GUIDE.md  README.md  README_CMAKE.md  README_Windows.md  build.sh  build_all_platforms.sh  build_deps_mingw.sh  build_fix.sh  build_fixed.sh  build_mingw_fixed.sh  build_mingw_linux.sh  build_mingw_simple.sh  build_mingw_toolchain.sh  build_simple.sh  build_windows.bat  build_windows.ps1  build_windows.sh  build_windows_mingw.bat  build_windows_msbuild.bat  build_windows_simple.bat  (+25 more)
cpuminer/build_windows/: CMakeCache.txt
cpuminer/cmake/: Toolchain-mingw-linux.cmake  Toolchain-mingw.cmake
src/: .clang-tidy  CMakeLists.txt  addrdb.cpp  addrdb.h  addresstype.cpp  addresstype.h  addrman.cpp  addrman.h  addrman_impl.h  arith_uint256.cpp  arith_uint256.h  attributes.h  banman.cpp  banman.h  base58.cpp  base58.h  bech32.cpp  bech32.h  bip324.cpp  bip324.h  bitcoin-chainstate.cpp  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx.cpp  bitcoin-util-res.rc  bitcoin-util.cpp  bitcoin-wallet.cpp  bitcoind-res.rc  bitquantum-cli.cpp  bitquantum-res.rc  bitquantum-tx-res.rc  bitquantum-wallet-res.rc  bitquantum.cpp  bitquantumd.cpp  blockencodings.cpp  blockencodings.h  blockfilter.cpp  blockfilter.h  chain.cpp  chain.h  (+123 more)
src/bench/: CMakeLists.txt  addrman.cpp  base58.cpp  bech32.cpp  bench.cpp  bench.h  bench_bitquantum.cpp  bip324_ecdh.cpp  block_assemble.cpp  blockencodings.cpp  ccoins_caching.cpp  chacha20.cpp  checkblock.cpp  checkblockindex.cpp  checkqueue.cpp  cluster_linearize.cpp  coin_selection.cpp  connectblock.cpp  crypto_hash.cpp  descriptors.cpp  disconnected_transactions.cpp  duplicate_inputs.cpp  ellswift.cpp  examples.cpp  gcs_filter.cpp  hashpadding.cpp  index_blockfilter.cpp  load_external.cpp  lockedpool.cpp  logging.cpp  mempool_ephemeral_spends.cpp  mempool_eviction.cpp  mempool_stress.cpp  merkle_root.cpp  nanobench.cpp  obfuscation.cpp  parse_hex.cpp  peer_eviction.cpp  poly1305.cpp  pool.cpp  (+19 more)
src/common/: args.cpp  args.h  bloom.cpp  bloom.h  config.cpp  init.cpp  init.h  interfaces.cpp  messages.cpp  messages.h  netif.cpp  netif.h  pcp.cpp  pcp.h  run_command.cpp  run_command.h  settings.cpp  settings.h  signmessage.cpp  signmessage.h  system.cpp  system.h  types.h  url.cpp  url.h
src/compat/: assumptions.h  byteswap.h  compat.h  cpuid.h  endian.h  stdin.cpp  stdin.h
src/consensus/: amount.h  consensus.h  merkle.cpp  merkle.h  params.h  tx_check.cpp  tx_check.h  tx_verify.cpp  tx_verify.h  validation.h
src/crypto/: CMakeLists.txt  aes.cpp  aes.h  chacha20.cpp  chacha20.h  chacha20poly1305.cpp  chacha20poly1305.h  common.h  hex_base.cpp  hex_base.h  hkdf_sha256_32.cpp  hkdf_sha256_32.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  muhash.cpp  muhash.h  poly1305.cpp  poly1305.h  randomq.cpp  randomq.h  randomq_hash.h  randomq_mining.cpp  randomq_mining.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha256_arm_shani.cpp  sha256_avx2.cpp  sha256_sse4.cpp  sha256_sse41.cpp  sha256_x86_shani.cpp  sha3.cpp  sha3.h  sha512.cpp  sha512.h  (+2 more)
src/index/: base.cpp  base.h  blockfilterindex.cpp  blockfilterindex.h  coinstatsindex.cpp  coinstatsindex.h  disktxpos.h  txindex.cpp  txindex.h
src/init/: bitcoin-gui.cpp  bitcoin-wallet.cpp  bitquantum-node.cpp  bitquantum-qt.cpp  bitquantumd.cpp  common.cpp  common.h
src/interfaces/: README.md  chain.h  echo.h  handler.h  init.h  ipc.h  mining.h  node.h  types.h  wallet.h
src/ipc/: CMakeLists.txt  context.h  exception.h  interfaces.cpp  process.cpp  process.h  protocol.h
src/kernel/: CMakeLists.txt  bitcoinkernel.cpp  blockmanager_opts.h  caches.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainstatemanager_opts.h  checks.cpp  checks.h  coinstats.cpp  coinstats.h  context.cpp  context.h  cs_main.cpp  cs_main.h  disconnected_transactions.cpp  disconnected_transactions.h  mempool_entry.h  mempool_limits.h  mempool_options.h  mempool_removal_reason.cpp  mempool_removal_reason.h  messagestartchars.h  notifications_interface.h  warning.h
src/logging/: timer.h
src/minisketch/: README.md  autogen.sh  configure.ac
src/node/: abort.cpp  abort.h  blockmanager_args.cpp  blockmanager_args.h  blockstorage.cpp  blockstorage.h  caches.cpp  caches.h  chainstate.cpp  chainstate.h  chainstatemanager_args.cpp  chainstatemanager_args.h  coin.cpp  coin.h  coins_view_args.cpp  coins_view_args.h  connection_types.cpp  connection_types.h  context.cpp  context.h  database_args.cpp  database_args.h  eviction.cpp  eviction.h  interface_ui.cpp  interface_ui.h  interfaces.cpp  kernel_notifications.cpp  kernel_notifications.h  mempool_args.cpp  mempool_args.h  mempool_persist.cpp  mempool_persist.h  mempool_persist_args.cpp  mempool_persist_args.h  miner.cpp  miner.h  mini_miner.cpp  mini_miner.h  minisketchwrapper.cpp  (+22 more)
src/policy/: ephemeral_policy.cpp  ephemeral_policy.h  feerate.cpp  feerate.h  fees.cpp  fees.h  fees_args.cpp  fees_args.h  packages.cpp  packages.h  policy.cpp  policy.h  rbf.cpp  rbf.h  settings.cpp  settings.h  truc_policy.cpp  truc_policy.h
src/qt/: README.md  (+128 more)
(+1473 files in other folders)
